@@ -19,8 +19,7 @@ type FunServantImpl struct {
 func NewFunServant(cf *config.ConfigServant) (this *FunServantImpl) {
 	this = &FunServantImpl{conf: cf}
 	this.lc = cache.NewLruCache(this.conf.Lcache.LruMaxItems)
-	this.lc.OnEvicted = func(key cache.Key, value interface{}) {
-	}
+	this.lc.OnEvicted = this.onLcLruEvicted
 
 	memcacheServers := this.conf.Memcache.ServerList()
 	this.mc = memcache.New(this.conf.Memcache.HashStrategy, memcacheServers...)
